--- a/res/layout/activity_fullscreen.xml
+++ b/res/layout/activity_fullscreen.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
+    android:name="com.google.android.gms.maps.SupportMapFragment"
     tools:context=".FullscreenActivity" >
 
     <!--
@@ -41,13 +42,16 @@
             android:background="@color/black_overlay"
             android:orientation="horizontal"
             tools:ignore="UselessParent" >
-            <EditText   
-			  android:hint="input here"  
-			  android:id="@+id/serch_word"   
-			  android:inputType="text"   
-			  android:layout_height="wrap_content"   
-			  android:layout_width="wrap_content"    
-			  android:text="">  
+
+            <EditText
+                android:id="@+id/serch_word"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.42"
+                android:hint="@string/input_here"
+                android:inputType="text"
+                android:text="" >
+  
 			</EditText> 
 
             <Button
@@ -59,5 +63,4 @@
                 android:text="@string/search_button" />
         </LinearLayout>
     </FrameLayout>
-
 </FrameLayout>
